--- a/_posts/2025-07-31-ADMET_AI.md
+++ b/_posts/2025-07-31-ADMET_AI.md
@@ -5,7 +5,7 @@ description: >
   ADMET-AI는 AI 기반으로 신약 후보 물질의 ADMET 특성을 예측하는 분석 도구입니다. 본 포스트에서는 해당 도구를 우리 플랫폼 내에서 어떻게 활용할 수 있는지 자세히 소개합니다.
 tags: [ADMET, DrugDiscovery, AI, 분석도구, 신약개발]
 author: author2
-canonical_url: http://yourdomain.com/2025/07/30/admet-ai-integration/
+canonical_url: https://connects-scv.github.io/2025/07/31/admet-ai/
 ---
 
 신약 개발 초기 단계에서 중요한 평가 요소 중 하나는 바로 **ADMET**입니다.  
