--- a/_posts/2025-07-31-ADMET_AI.md
+++ b/_posts/2025-07-31-ADMET_AI.md
@@ -1,11 +1,13 @@
 ---
 layout: post
-title: "우리 서비스에서 ADMET-AI 분석 도구 활용하기"
+title: "ADMET-AI 분석 도구 활용하기"
 description: >
   ADMET-AI는 AI 기반으로 신약 후보 물질의 ADMET 특성을 예측하는 분석 도구입니다. 본 포스트에서는 해당 도구를 우리 플랫폼 내에서 어떻게 활용할 수 있는지 자세히 소개합니다.
-tags: [ADMET, DrugDiscovery, AI, 분석도구, 신약개발]
-author: author2
-canonical_url: https://connects-scv.github.io/2025/07/31/admet-ai/
+categories:
+  - analysis
+  - protein
+tags: [ADMET, Drug Discovery, AI, 분석도구, 신약개발]
+author: author
 ---
 
 신약 개발 초기 단계에서 중요한 평가 요소 중 하나는 바로 **ADMET**입니다.  
@@ -46,7 +48,7 @@ ADMET은 **흡수(Absorption), 분포(Distribution), 대사(Metabolism), 배설(
 
 ```plaintext
 Job Name: admet_test1
-````
+```
 
 분석 결과를 저장하고 구분하기 위한 이름입니다.
 
@@ -112,4 +114,4 @@ CCN(CC)C(=O)C1=CC=CC=C1
 `ADMET-AI` 분석 도구는 기존의 ADMET 평가 과정을 크게 단축시킬 수 있는 도구입니다.
 우리 플랫폼에서는 이 도구를 **직관적이고 유연한 UI와 함께 제공**하여, 연구자들이 보다 빠르게 의사결정을 내릴 수 있도록 지원합니다.
 
-> 서비스 내 [ADMET 분석 페이지](http://yourdomain.com/admet)에서 지금 바로 사용해보세요!
+> 서비스 내 [ADMET 분석 페이지](https://scv.bio/Analysis/admet-ai)에서 지금 바로 사용해보세요!
