--- a/_posts/2025-07-31-Antifold.md
+++ b/_posts/2025-07-31-Antifold.md
@@ -125,4 +125,4 @@ cdr_pos: CDR1:32,CDR1:33,CDR2:50
 `Antifold` 분석 도구는 복잡한 단백질 구조 설계를 **AI의 도움으로 자동화**합니다.
 우리 플랫폼에서는 이를 시각적이고 유연한 UI로 통합하여, **생물학 연구자 및 엔지니어가 손쉽게 설계 작업을 수행**할 수 있도록 지원하고 있습니다.
 
-> 지금 바로 [Antifold 분석 페이지](https://scv.bio/Analysis/antifold)에서 직접 사용해보세요!
+> 지금 바로 <a href="https://scv.bio/Analysis/antifold" target="_blank" rel="noopener noreferrer">Antifold 분석 페이지</a>에서 직접 사용해보세요!
