--- a/_posts/2025-07-31-ADMET_AI.md
+++ b/_posts/2025-07-31-ADMET_AI.md
@@ -114,4 +114,4 @@ CCN(CC)C(=O)C1=CC=CC=C1
 `ADMET-AI` 분석 도구는 기존의 ADMET 평가 과정을 크게 단축시킬 수 있는 도구입니다.
 우리 플랫폼에서는 이 도구를 **직관적이고 유연한 UI와 함께 제공**하여, 연구자들이 보다 빠르게 의사결정을 내릴 수 있도록 지원합니다.
 
-> 서비스 내 <a href="https://scv.bio/Analysis/admet-ai" target="_blank" rel="noopener noreferrer">ADMET 분석 페이지</a>에서 지금 바로 사용해보세요!
+> 서비스 내 <a href="#" onclick="window.open('https://scv.bio/Analysis/admet-ai', '_blank'); return false;">ADMET 분석 페이지</a>에서 지금 바로 사용해보세요!
