[Post] Post DiffDock

--- a/_posts/2025-08-21-ToxinPred3.md
+++ b/_posts/2025-08-21-ToxinPred3.md
@@ -103,4 +103,4 @@ Job Name: ToxinPred3_analysis1
 
 ToxinPred3.0은 펩타이드의 독성 예측을 위한 필수 도구로, 치료제 개발, 백신 디자인, 식품/나노소재 안전성 검증 등 다양한 생명과학 응용 분야에 활용됩니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://scv.bio/Analysis/toxinpred3', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/toxinpred3', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
