[Post] Fix Category

--- a/_posts/2025-08-21-DiffDock.md
+++ b/_posts/2025-08-21-DiffDock.md
@@ -1,17 +1,11 @@
 ---
-
 layout: post
 title: "DiffDock 리간드 도킹 포즈 예측 도구"
 description: >
-DiffDock은 단백질이 고정된 상태에서 리간드의 최적 결합 위치와 형태를 예측하는 diffusion 기반 모델입니다. 빠르고 정확한 포즈 탐색이 가능합니다.
-categories:
-
-* analysis
-* structure
-* prediction
-  tags: \[DiffDock, 리간드 도킹, 단백질-리간드, 포즈 예측, 단백질 구조, small molecule, 도킹]
-  author: author
-
+  DiffDock은 단백질이 고정된 상태에서 리간드의 최적 결합 위치와 형태를 예측하는 diffusion 기반 모델입니다. 빠르고 정확한 포즈 탐색이 가능합니다.
+categories: [analysis, docking, prediction, ml]
+tags: ["DiffDock", "리간드 도킹", "단백질-리간드", "포즈 예측", "단백질 구조", "small molecule", "도킹"]
+author: author
 ---
 
 ## 🔬 DiffDock이란?
@@ -42,7 +36,7 @@ Job Name: DiffDock_docking1
 ### 3. 파라미터 설정
 
 | 옵션                | 설명             |
-| ----------------- | -------------- |
+|-------------------|----------------|
 | Number of designs | 생성할 도킹 포즈 수 설정 |
 
 ```plaintext
@@ -75,7 +69,7 @@ DiffDock은 다음과 같은 분야에서 활용됩니다:
 ## 🔄 관련 도구 및 연계 분석
 
 | 연계 도구      | 설명                                 |
-| ---------- | ---------------------------------- |
+|----------|------------------------------------|
 | LigandMPNN | DiffDock 예측 포즈 기반으로 단백질 서열 최적화     |
 | SS-GNN     | 생성된 복합체 구조의 binding affinity 정량 예측 |
 | Autodock   | 후속 도킹 점수 비교 검증                     |
