--- a/_posts/2025-08-21-ToxinPred3.md
+++ b/_posts/2025-08-21-ToxinPred3.md
@@ -1,106 +1,105 @@
 ---
 layout: post
-title: "ToxinPred3.0 펩타이드 독성 예측 도구"
+title: "ToxinPred3.0 단백질/펩타이드 독성 예측 도구"
 description: >
-  ToxinPred3.0은 펩타이드 및 단백질의 잠재적인 독성을 평가하는 머신러닝 기반 도구입니다. 독성/비독성 펩타이드 데이터를 학습하여 새로운 서열에 대해 독성 가능성을 예측합니다.
+    ToxinPred3.0은 단백질 및 펩타이드 서열의 독성 가능성을 예측하는 머신러닝 기반 도구입니다. 
+    세포막 파괴 가능성에 기반한 독성 예측 외에도 다양한 독성 분석 모듈과 연계 활용이 가능합니다.
 categories:
-  - analysis
-  - protein
-  - prediction
-tags: [ToxinPred3.0, 독성 예측, 펩타이드 독성, peptide toxicity, 단백질 분석, 생물정보학, 머신러닝, 독성평가]
+    - analysis 
+    - prediction
+    - protein
+    - toxicity
+    - peptide
+tags: [ToxinPred3.0, 독성 예측, 펩타이드, 단백질, 머신러닝, toxicity prediction, peptide, protein, 바이오안전성]
 author: author
 ---
 
 ## 🔬 ToxinPred3.0이란?
 
-**ToxinPred3.0**은 단백질 및 펩타이드의 **잠재적인 독성을 예측**하는 머신러닝 기반 도구입니다.  
-**독성/비독성 펩타이드 데이터베이스를 바탕으로 지도 학습된 모델**로, 새로운 펩타이드 서열에 대해 독성 가능성을 점수화하여 제공합니다.
+**ToxinPred3.0**은 단백질 또는 펩타이드 서열의 **잠재적인 독성 여부를 예측**하는 머신러닝 기반 도구입니다.
+**독성/비독성 펩타이드 DB**를 기반으로 학습되어, 사용자가 입력한 새로운 서열에 대해 **세포막 파괴 가능성 중심의 일반 독성 여부**를 판단합니다.
 
-### 독성 예측이란?
-펩타이드를 포함한 생체 분자는 **체내에 들어가 다양한 독성을 유발할 수 있습니다.**  
-ToxinPred3.0은 그 중에서도 **세포막을 와해시킬 가능성에 대한 일반 독성**을 평가합니다.
-
-또한, 다양한 특화된 독성 예측 모듈과도 연계하여 다음과 같은 독성 유형을 평가할 수 있습니다:
-
-- **간 독성** ([DILI](https://github.com/srijitseal/DILI))
-- **심장 독성** ([hERG-prediction](https://github.com/WeilabMSU/hERG-prediction))
-- **신경 독성** ([NeuTox](https://github.com/xuejunhe/NeuTox-2.0))
-- **유전 독성** ([Amesformer](https://github.com/luke-a-thompson/AmesFormer))
-- **면역 독성** ([mhcflurry](https://github.com/openvax/mhcflurry), [DeepNeo](https://github.com/kaistomics/DeepNeo))
+> 참고: 내부적으로 Global sequence 패턴과 Local motif 정보를 활용한 복합적 예측이 가능합니다.
 
 ## 🧪 우리 플랫폼에서 어떻게 제공되나요?
 
-우리 플랫폼에서는 **ToxinPred3.0을 직관적인 UI로 제공합니다.**  
-**복잡한 파라미터 설정 없이 FASTA 형식의 서열 입력만으로** 손쉽게 독성 예측을 수행할 수 있습니다.
+우리 플랫폼에서는 **ToxinPred3.0을 직관적인 UI로 제공합니다.**
+복잡한 파라미터 설정 없이, FASTA 입력 또는 파일 업로드만으로 **단일 또는 다중 서열의 독성 예측**을 수행할 수 있습니다.
 
-- **ML / MERCI / Hybrid** 모델 중 선택 가능
-- **독성 점수와 예측 결과**를 명확히 제공
-- **결과 요약과 해석 정보** 제공
+| 옵션                | 설명                           |
+| ----------------- | ---------------------------- |
+| ML                | 서열의 Global 패턴 기반 예측 (빠름)     |
+| MERCI             | Local motif 기반 예측 (정밀)       |
+| Hybrid            | Global + Local 통합 예측 (가장 정확) |
+| Region importance | 독성에 기여하는 서열 영역 시각화           |
 
 ## 📝 사용 방법 안내
 
 ### 1. 작업 이름 지정
-```plaintext
-Job Name: ToxinPred3_analysis1
-```
+
+분석 결과를 구분하기 위한 작업 이름을 입력합니다.
 
 ### 2. 입력 방식 선택
 
-* **FASTA 형식**의 펩타이드 서열 입력 또는 업로드
-* 예시: Uniprot에서 snake venom (독성) 또는 collagen (비독성) 서열 검색
+* `FASTA 서열 직접 입력`
+* `FASTA 파일 업로드`
 
-### 3. 예측 모델 선택
+### 3. 파라미터 설정
 
-| 모델 유형  | 설명                           |
-| ------ | ---------------------------- |
-| ML     | Global 패턴 기반. 빠르나 부정확할 수 있음  |
-| MERCI  | Local motif 기반. 유사도 비교 중심 분석 |
-| Hybrid | ML + MERCI 통합 모델. 가장 정확하나 느림 |
+* ML, MERCI, Hybrid 중 선택
+* Region importance 옵션 선택 가능
 
 ### 4. 결과 확인
 
-| 항목              | 설명                               |
-| --------------- | -------------------------------- |
-| ML score        | 1에 가까울수록 독성 가능성 ↑                |
-| MERCI score pos | 독성 펩타이드와 motif 유사도               |
-| MERCI score neg | 비독성 펩타이드와 motif 유사도              |
-| Hybrid score    | ML + MERCI 통합 점수                 |
-| Prediction      | 0.5 이상이면 toxic, 미만이면 non-toxic   |
-| PPV             | 예측이 positive일 때 실제 positive일 가능성 |
+출력 결과에는 다음과 같은 지표가 포함됩니다:
 
-> 단, 점수가 높다고 해서 반드시 **더 높은 독성을 의미하지는 않습니다.**
+| 지표                  | 설명                                        |
+| ------------------- | ----------------------------------------- |
+| ML score            | 1에 가까울수록 toxic 가능성 높음 (절대적인 독성 강도 의미는 아님) |
+| MERCI score pos/neg | motif 유사성 기반 toxic/non-toxic 유사도          |
+| Hybrid score        | ML + MERCI 통합 점수                          |
+| Prediction          | 최종 독성 여부 예측 (0.5 기준)                      |
+| PPV                 | 예측이 positive일 때 실제 독성일 확률                 |
+
+```plaintext
+Job Name: toxin_test01
+입력값 예시:
+>peptide1
+WKWLKKLFK
+```
 
 ## 🧬 분석 결과 활용 예시
 
-* **항균/항바이러스/항암 펩타이드의 독성 스크리닝**
-* **펩타이드 백신의 안전성 평가**
-* **식품 소재의 인체 안전성 검증**
-* **나노 바이오소재의 독성 예측 및 검증**
+ToxinPred3.0은 다음과 같은 연구 및 개발 분야에서 유용하게 활용됩니다:
+
+* 항균/항바이러스/항암 펩타이드의 **독성 사전 평가**
+* 펩타이드 백신 후보의 **안전성 검증**
+* 식품 유래 펩타이드의 **소비자 안전성 확인**
+* 나노바이오소재의 **세포 독성 예측**
 
 ## ⚠️ 주의사항
 
-| 항목    | 내용                          |
-| ----- | --------------------------- |
-| 입력 형식 | FASTA 형식 필수                 |
-| 입력 길이 | 너무 짧거나 긴 서열은 예측 정확도 낮을 수 있음 |
-| 분석 시간 | Hybrid 모델은 수 분 이상 소요될 수 있음  |
-| 점수 해석 | 독성 강도 자체를 의미하지 않음           |
-
-## 🔍 관련 도구 및 비교 모델
-
-| 도구명              | 설명                |
-| ---------------- | ----------------- |
-| StrucToxNet      | 3D 구조 기반 독성 예측 모델 |
-| tAMPER / HEMOPI2 | 점수 기반 정량적 독성 예측   |
-
-## 🔗 다른 모듈과의 연계 활용
-
-* **Boltz**: Diffusion 기반 펩타이드 구조 예측 → 비독성 펩타이드 구조 확인
-* **Themompnn**: 펩타이드 돌연변이 예측 → 독성이 낮고 안정적인 서열 탐색
-* **ProteinMPNN**: 펩타이드 서열 생성 → de novo non-toxic 서열 디자인
+* 입력은 **FASTA 형식**으로 해야 하며, 너무 긴 서열은 처리 시간이 증가할 수 있습니다.
+* **Hybrid 모드**는 정확하지만 분석 시간이 더 소요됩니다.
+* **score 값이 높다고 독성이 더 강하다는 의미는 아닙니다.** binary classification 기준입니다.
+* 다중 서열 입력 시, 분석 결과를 엑셀로 다운로드할 수 있습니다.
 
 ## ✅ 마무리
 
-ToxinPred3.0은 펩타이드의 독성 예측을 위한 필수 도구로, 치료제 개발, 백신 디자인, 식품/나노소재 안전성 검증 등 다양한 생명과학 응용 분야에 활용됩니다.
+ToxinPred3.0은 다양한 생명과학/의약 연구에서 **안전성 평가의 필수 도구**로 활용될 수 있습니다.
+특히 다른 예측 모듈이나 설계 도구와 연계해 **독성 없는 펩타이드 설계**로까지 확장할 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/toxinpred3', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/ToxinPred3.0', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
+
+---
+
+> 📌 관련 독성 예측 도구들도 함께 살펴보세요:
+>
+> * 간 독성: [DILI](https://github.com/srijitseal/DILI)
+> * 심장 독성: [hERG-prediction](https://github.com/WeilabMSU/hERG-prediction)
+> * 신경 독성: [NeuTox](https://github.com/xuejunhe/NeuTox-2.0)
+> * 유전 독성: [Amesformer](https://github.com/luke-a-thompson/AmesFormer)
+> * 면역 독성: [mhcflurry](https://github.com/openvax/mhcflurry), [DeepNeo](https://github.com/kaistomics/DeepNeo)
+> * 구조 기반 독성 예측: [StrucToxNet](https://github.com/), [tAMPER](https://github.com/), [HEMOPI2](https://github.com/)
+
+> 🧩 연계 도구 예시: Boltz, ThermoMPNN, ProteinMPNN
