--- a/_posts/2025-08-21-ADMET-AI.md
+++ b/_posts/2025-08-21-ADMET-AI.md
@@ -13,17 +13,17 @@ author: author
 
 ## 🔬 ADMET-AI란?
 
-**ADMET-AI**는 신약개발 과정에서 중요한 **ADMET(Absorption, Distribution, Metabolism, Excretion, Toxicity)** 특성을 예측하는 **AI 기반 분석 플랫폼**입니다.
-약물 후보물질의 **안전성과 약리학적 성질을 사전 평가**하여, 개발 초기 단계에서 유망한 화합물을 선별하는 데 도움을 줍니다.
+**ADMET-AI** 는 신약개발 과정에서 중요한 **ADMET(Absorption, Distribution, Metabolism, Excretion, Toxicity)** 특성을 예측하는 **AI 기반 분석 플랫폼**입니다.
+약물 후보물질의 **안전성과 약리학적 성질을 사전 평가** 하여, 개발 초기 단계에서 유망한 화합물을 선별하는 데 도움을 줍니다.
 
 > 참고: ADMET-AI는 화합물의 그래프 구조와 molecular fingerprint를 통합하여 **Multi-task learning** 기반으로 여러 특성을 동시에 예측합니다.
 
 ## 🧪 우리 플랫폼에서 어떻게 제공되나요?
 
 우리 플랫폼에서는 **ADMET-AI를 빠르고 직관적인 방식으로 제공합니다.**
-SMILES 형식의 화합물 정보를 입력하면, 주요 ADMET property 예측 결과와 \*\*시각화 자료(heatmap, plot)\*\*를 함께 확인할 수 있습니다.
+SMILES 형식의 화합물 정보를 입력하면, 주요 ADMET property 예측 결과와 **시각화 자료(heatmap, plot)** 를 함께 확인할 수 있습니다.
 
-별도의 파라미터 설정 없이도 **신속한 분석 결과**를 제공하므로, hit-to-lead 과정에서 빠른 의사결정이 가능합니다.
+별도의 파라미터 설정 없이도 **신속한 분석 결과** 를 제공하므로, hit-to-lead 과정에서 빠른 의사결정이 가능합니다.
 
 ## 📝 사용 방법 안내
 
@@ -67,7 +67,7 @@ Job Name: ADMETAI_test1
 
 ## ✅ 마무리
 
-**ADMET-AI는 빠르고 신뢰도 높은 ADMET 예측을 지원하는 최신 AI 기반 도구**입니다.
-DILI, Amesformer, hERG-prediction 등의 독성 예측 도구와 **교차 검증**하거나, Diffdock과 연계하여 **결합력과 ADMET 특성을 동시에 고려**한 의사결정에도 활용 가능합니다.
+**ADMET-AI는 빠르고 신뢰도 높은 ADMET 예측을 지원하는 최신 AI 기반 도구** 입니다.
+DILI, Amesformer, hERG-prediction 등의 독성 예측 도구와 **교차 검증** 하거나, Diffdock과 연계하여 **결합력과 ADMET 특성을 동시에 고려** 한 의사결정에도 활용 가능합니다.
 
 > 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/admet-ai', '_blank'); return false;" rel="noopener noreferrer">ADMET-AI 분석 페이지</a>에서 직접 사용해보세요!
