[Post] ToxinPred3 링크 수정

--- a/_posts/2025-08-21-ToxinPred3.md
+++ b/_posts/2025-08-21-ToxinPred3.md
@@ -89,7 +89,7 @@ ToxinPred3.0은 다음과 같은 연구 및 개발 분야에서 유용하게 활
 ToxinPred3.0은 다양한 생명과학/의약 연구에서 **안전성 평가의 필수 도구** 로 활용될 수 있습니다.
 특히 다른 예측 모듈이나 설계 도구와 연계해 **독성 없는 펩타이드 설계** 로까지 확장할 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/ToxinPred3.0', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/toxinPred3', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
 
 ---
 
