[Post] Demo 링크 수정 및 블로그 랜딩페이지 추가

--- a/_posts/2025-08-21-ADMET-AI.md
+++ b/_posts/2025-08-21-ADMET-AI.md
@@ -70,4 +70,4 @@ Job Name: ADMETAI_test1
 **ADMET-AI는 빠르고 신뢰도 높은 ADMET 예측을 지원하는 최신 AI 기반 도구** 입니다.
 DILI, Amesformer, hERG-prediction 등의 독성 예측 도구와 **교차 검증** 하거나, Diffdock과 연계하여 **결합력과 ADMET 특성을 동시에 고려** 한 의사결정에도 활용 가능합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/admet-ai', '_blank'); return false;" rel="noopener noreferrer">ADMET-AI 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/admet-ai', '_blank'); return false;" rel="noopener noreferrer">ADMET-AI 분석 페이지</a>에서 직접 사용해보세요!
