--- a/_posts/2025-08-21-Bioemu.md
+++ b/_posts/2025-08-21-Bioemu.md
@@ -73,4 +73,4 @@ FASTA: >sp|P12345|...
 **Bioemu는 빠른 속도와 열역학 정확성을 겸비한 단백질 구조 샘플링 도구**입니다.
 HPacker로 side-chain을 복원하거나, GROMACS 등과 연계해 안정화 및 시뮬레이션 확장이 가능하며, 변이체 비교 분석에도 유용합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/bioemu', '_blank'); return false;" rel="noopener noreferrer">Bioemu 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/bioemu', '_blank'); return false;" rel="noopener noreferrer">Bioemu 분석 페이지</a>에서 직접 사용해보세요!
