--- a/_posts/2025-08-21-Boltz-2.md
+++ b/_posts/2025-08-21-Boltz-2.md
@@ -108,4 +108,4 @@ Boltz-2는 다양한 도구와 연계하여 다음과 같은 분석 파이프라
 **Boltz-2는 단백질 구조 생성과 결합 예측을 동시에 수행할 수 있는 차세대 도킹 플랫폼** 입니다.
 빠르고 유연하며, 다양한 생물학적 상호작용을 해석할 수 있는 **확률 기반 generative 모델의 장점을 극대화** 합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/boltz', '_blank'); return false;" rel="noopener noreferrer">Boltz-2 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/boltz', '_blank'); return false;" rel="noopener noreferrer">Boltz-2 분석 페이지</a>에서 직접 사용해보세요!
