--- a/_posts/2025-08-21-Chai.md
+++ b/_posts/2025-08-21-Chai.md
@@ -82,4 +82,4 @@ Ligand SMILES: CCOC(=O)C1=CC=CC=C1
 **Chai는 단백질 구조 예측과 결합 구조 예측을 동시에 수행하는 강력한 도구** 입니다.
 Diffdock이나 RFdiffusion과의 비교 분석에도 유용하며, DLKcat이나 Boltz-2 등과의 연계 분석도 가능합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/chai', '_blank'); return false;" rel="noopener noreferrer">Chai 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/chai', '_blank'); return false;" rel="noopener noreferrer">Chai 분석 페이지</a>에서 직접 사용해보세요!
