--- a/_posts/2025-08-21-DiffDock.md
+++ b/_posts/2025-08-21-DiffDock.md
@@ -79,4 +79,4 @@ DiffDock은 다음과 같은 분야에서 활용됩니다:
 DiffDock은 **빠르고 정확한 리간드 도킹 포즈 예측** 을 위한 강력한 도구입니다.
 약물 개발, 구조 기반 설계, 재창출 연구에 유용하게 활용할 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/DiffDock', '_blank'); return false;" rel="noopener noreferrer">DiffDock 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/DiffDock', '_blank'); return false;" rel="noopener noreferrer">DiffDock 분석 페이지</a>에서 직접 사용해보세요!
