--- a/_posts/2025-08-21-FixPDB.md
+++ b/_posts/2025-08-21-FixPDB.md
@@ -68,4 +68,4 @@ PDB: structure_input.pdb
 **FixPDB는 구조 오류를 자동으로 정리하여 후속 계산의 정확도와 안정성을 높여주는 전처리 도구**입니다.
 FoldX, GROMACS, Boltz-2 등 다양한 구조 기반 분석 도구들과 **자연스럽게 연계되어 활용**될 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/fixpdb', '_blank'); return false;" rel="noopener noreferrer">FixPDB 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/fixpdb', '_blank'); return false;" rel="noopener noreferrer">FixPDB 분석 페이지</a>에서 직접 사용해보세요!
