--- a/_posts/2025-08-21-GROMACS.md
+++ b/_posts/2025-08-21-GROMACS.md
@@ -182,4 +182,4 @@ gmx cluster -s md.tpr -f noPBC.xtc -o clusters.pdb -method gromos -cutoff 0.2
 
 ---
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/GROMACS', '_blank'); return false;" rel="noopener noreferrer">GROMACS 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/GROMACS', '_blank'); return false;" rel="noopener noreferrer">GROMACS 분석 페이지</a>에서 직접 사용해보세요!
