--- a/_posts/2025-08-21-PLIP.md
+++ b/_posts/2025-08-21-PLIP.md
@@ -71,4 +71,4 @@ PDB: ligand_bound_structure.pdb
 **PLIP은 단백질–리간드 복합체의 상세 상호작용을 자동 분석하고 시각화해주는 필수 후처리 도구** 입니다.
 Chai, GROMACS, PRODIGY 등과 연계하여 **결합 메커니즘–구조 안정성–친화도 평가까지 통합 분석** 이 가능합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/plip', '_blank'); return false;" rel="noopener noreferrer">PLIP 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/plip', '_blank'); return false;" rel="noopener noreferrer">PLIP 분석 페이지</a>에서 직접 사용해보세요!
