--- a/_posts/2025-08-21-Antifold.md
+++ b/_posts/2025-08-21-Antifold.md
@@ -103,4 +103,4 @@ Antifold는 다음과 같은 목적에 유용하게 활용됩니다:
 **Antifold는 항체 구조 기반 서열 최적화에 특화된 강력한 도구입니다.**
 높은 정확도의 Transformer 모델을 기반으로 하며, 단백질 엔지니어링 및 특허 전략 수립에 있어 큰 도움을 줄 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/antifold', '_blank'); return false;" rel="noopener noreferrer">Antifold 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/antifold', '_blank'); return false;" rel="noopener noreferrer">Antifold 분석 페이지</a>에서 직접 사용해보세요!
