--- a/_posts/2025-08-21-DLKcat.md
+++ b/_posts/2025-08-21-DLKcat.md
@@ -72,4 +72,4 @@ SMILES: CCOC(=O)C1=CC=CC=C1
 **DLKcat은 Kcat 예측을 통해 효소의 기능적 활성을 빠르게 비교할 수 있는 실용적 도구**입니다.
 Protenix, PIGNET2 등과 연계하여 구조 안정성과 결합 친화도까지 고려한 **통합적 효소 설계 및 평가**가 가능합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/dlkcat', '_blank'); return false;" rel="noopener noreferrer">DLKcat 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/dlkcat', '_blank'); return false;" rel="noopener noreferrer">DLKcat 분석 페이지</a>에서 직접 사용해보세요!
