--- a/_posts/2025-08-21-DeepFRI.md
+++ b/_posts/2025-08-21-DeepFRI.md
@@ -78,4 +78,4 @@ FASTA: >sp|P12345|...
 **DeepFRI는 기능 예측과 동시에 기능 hotspot을 시각적으로 확인할 수 있는 강력한 도구** 입니다.
 Deeprank2, Mutabind2 등의 도구와 비교하거나, DLKcat, RFdiffusion 등과 **연계 분석** 하여 신뢰도 높은 연구를 진행할 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/deepfri', '_blank'); return false;" rel="noopener noreferrer">DeepFRI 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/deepfri', '_blank'); return false;" rel="noopener noreferrer">DeepFRI 분석 페이지</a>에서 직접 사용해보세요!
