--- a/_posts/2025-08-21-Dscript.md
+++ b/_posts/2025-08-21-Dscript.md
@@ -75,4 +75,4 @@ Pair list: A.txt, B.txt
 **Dscript는 서열 기반 PPI 예측을 빠르게 수행할 수 있는 딥러닝 도구**입니다.
 AF multimer, Boltz-2 등과 연계하여 **구조 기반 정밀 분석 및 친화도 평가**로 확장 활용이 가능합니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/dscript', '_blank'); return false;" rel="noopener noreferrer">Dscript 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/dscript', '_blank'); return false;" rel="noopener noreferrer">Dscript 분석 페이지</a>에서 직접 사용해보세요!
