--- a/_posts/2025-08-21-Netsolp.md
+++ b/_posts/2025-08-21-Netsolp.md
@@ -72,4 +72,4 @@ FASTA: >sp|P12345|...
 **NetsolP는 빠르고 정확한 용해도 예측이 가능한 서열 기반 도구**입니다.
 Camsol, Aggrescan3D, ZipperDB 등과 연계하여 hotspot 분석 및 **라이브러리 설계 최적화**에 활용할 수 있습니다.
 
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr/Analysis/netsolp', '_blank'); return false;" rel="noopener noreferrer">NetsolP 분석 페이지</a>에서 직접 사용해보세요!
+> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/netsolp', '_blank'); return false;" rel="noopener noreferrer">NetsolP 분석 페이지</a>에서 직접 사용해보세요!
