[Post] Fix toxinpred3

--- a/_posts/2025-08-21-ToxinPred3.md
+++ b/_posts/2025-08-21-ToxinPred3.md
@@ -1,105 +1,71 @@
 ---
 layout: post
-title: "ToxinPred3.0 단백질/펩타이드 독성 예측 도구"
+title: "[ToxinPred3.0] 펩타이드 독성 예측 모델"
 description: >
-    ToxinPred3.0은 단백질 및 펩타이드 서열의 독성 가능성을 예측하는 머신러닝 기반 도구입니다. 
-    세포막 파괴 가능성에 기반한 독성 예측 외에도 다양한 독성 분석 모듈과 연계 활용이 가능합니다.
+    ToxinPred3.0은 단백질 및 펩타이드 서열의 잠재적 독성을 평가하는 머신러닝 기반 모델입니다. 다양한 분류기(RF, ANN, SVM)와 motif 분석을 통한 Hybrid 방식을 지원합니다.
 categories:
-    - analysis 
+    - analysis
     - prediction
-    - protein
-    - toxicity
-    - peptide
-tags: [ToxinPred3.0, 독성 예측, 펩타이드, 단백질, 머신러닝, toxicity prediction, peptide, protein, 바이오안전성]
+    - structure
+tags: [ToxinPred3.0, 독성예측, 펩타이드, 단백질, 머신러닝, 백신디자인, 신약개발]
 author: author
 ---
+# ToxinPred3.0
 
-## 🔬 ToxinPred3.0이란?
+## 1. 모델 개요
 
-**ToxinPred3.0** 은 단백질 또는 펩타이드 서열의 **잠재적인 독성 여부를 예측** 하는 머신러닝 기반 도구입니다.
-**독성/비독성 펩타이드 DB** 를 기반으로 학습되어, 사용자가 입력한 새로운 서열에 대해 **세포막 파괴 가능성 중심의 일반 독성 여부** 를 판단합니다.
+* **입력된 단백질/펩타이드 서열의 잠재적 독성을 평가**하는 머신러닝 기반 모델
 
-> 참고: 내부적으로 Global sequence 패턴과 Local motif 정보를 활용한 복합적 예측이 가능합니다.
+## 2. 작동 원리
 
-## 🧪 우리 플랫폼에서 어떻게 제공되나요?
+* 입력된 펩타이드 서열에서 아미노산 조성, n-mer 패턴, 물리화학적 특성 등 다양한 **feature를 생성**
+* RF, ANN, SVM 등의 분류기를 활용하여 **Swissprot 기반 독성/비독성 학습 데이터**로 지도학습
 
-우리 플랫폼에서는 **ToxinPred3.0을 직관적인 UI로 제공합니다.**
-복잡한 파라미터 설정 없이, FASTA 입력 또는 파일 업로드만으로 **단일 또는 다중 서열의 독성 예측** 을 수행할 수 있습니다.
+## 3. 활용 분야
 
-| 옵션                | 설명                           |
-| ----------------- | ---------------------------- |
-| ML                | 서열의 Global 패턴 기반 예측 (빠름)     |
-| MERCI             | Local motif 기반 예측 (정밀)       |
-| Hybrid            | Global + Local 통합 예측 (가장 정확) |
-| Region importance | 독성에 기여하는 서열 영역 시각화           |
+* **펩타이드 신약 개발**: 후보 물질의 독성 가능성 사전 필터링
+* **백신 디자인**: 면역원성 펩타이드의 독성 위험 최소화
+* **바이오소재**: 나노 바이오 소재의 안전성 확보
 
-## 📝 사용 방법 안내
+## 4. 차별 포인트
 
-### 1. 작업 이름 지정
+* **ML/MERCI 기반 하이브리드 모델**을 제공하여 전역 패턴과 지역 motif 모두 고려
 
-분석 결과를 구분하기 위한 작업 이름을 입력합니다.
+## 5. 함께 비교해볼 만한 모델
 
-### 2. 입력 방식 선택
+* **DILI**: 간 독성 평가 모델
+* **hERGAI**: 심장 독성 예측 모델
+* **StrucToxNet**: 3D 구조 기반 독성 예측, 정확도 우수
+* **HEMOPI2**: 정량적 score 기반 독성 평가 제공
 
-* `FASTA 서열 직접 입력`
-* `FASTA 파일 업로드`
+## 6. 연계해 볼 만한 모델
 
-### 3. 파라미터 설정
+* **Alphaproteo**: 구조 예측 → 독성 없는 구조 확인
+* **ThermoMPNN**: 돌연변이 탐색 → 안정적이고 독성 적은 펩타이드 최적화
+* **ProteinMPNN**: de novo 서열 생성 후 ToxinPred3.0으로 필터링
 
-* ML, MERCI, Hybrid 중 선택
-* Region importance 옵션 선택 가능
+## 7. 사용 방법
 
-### 4. 결과 확인
+### 입력 방법
 
-출력 결과에는 다음과 같은 지표가 포함됩니다:
+* **단일 서열**: 직접 FASTA 붙여넣기
+* **다수 서열**: FASTA 파일 업로드 가능
 
-| 지표                  | 설명                                        |
-| ------------------- | ----------------------------------------- |
-| ML score            | 1에 가까울수록 toxic 가능성 높음 (절대적인 독성 강도 의미는 아님) |
-| MERCI score pos/neg | motif 유사성 기반 toxic/non-toxic 유사도          |
-| Hybrid score        | ML + MERCI 통합 점수                          |
-| Prediction          | 최종 독성 여부 예측 (0.5 기준)                      |
-| PPV                 | 예측이 positive일 때 실제 독성일 확률                 |
+### 설정 옵션
 
-```plaintext
-Job Name: toxin_test01
-입력값 예시:
->peptide1
-WKWLKKLFK
-```
+* **ML**: 전역 서열 패턴 기반, 빠르지만 부정확 가능
+* **MERCI**: motif 기반, 국소 패턴에 정밀
+* **Hybrid**: Global+Local 패턴 통합, 가장 정확하지만 처리 시간 김
+* **Region importance**: 독성 기여 부위 시각화
 
-## 🧬 분석 결과 활용 예시
+### 출력 지표
 
-ToxinPred3.0은 다음과 같은 연구 및 개발 분야에서 유용하게 활용됩니다:
+* **ML score**: 1에 가까울수록 toxic (강도 의미 아님)
+* **MERCI score pos**: toxin motif와 유사도
+* **MERCI score neg**: non-toxin motif와 유사도
+* **Hybrid score**: ML + MERCI 통합 결과
+* **Prediction**: 최종 예측 결과 (0.5 기준 이상 toxic)
+* **PPV**: Positive 예측 시 실제 양성일 확률
+* **주의**: score 높다고 독성이 더 강하다는 의미는 아님 → binary 분류임
 
-* 항균/항바이러스/항암 펩타이드의 **독성 사전 평가**
-* 펩타이드 백신 후보의 **안전성 검증**
-* 식품 유래 펩타이드의 **소비자 안전성 확인**
-* 나노바이오소재의 **세포 독성 예측**
-
-## ⚠️ 주의사항
-
-* 입력은 **FASTA 형식** 으로 해야 하며, 너무 긴 서열은 처리 시간이 증가할 수 있습니다.
-* **Hybrid 모드** 는 정확하지만 분석 시간이 더 소요됩니다.
-* **score 값이 높다고 독성이 더 강하다는 의미는 아닙니다.** binary classification 기준입니다.
-* 다중 서열 입력 시, 분석 결과를 엑셀로 다운로드할 수 있습니다.
-
-## ✅ 마무리
-
-ToxinPred3.0은 다양한 생명과학/의약 연구에서 **안전성 평가의 필수 도구** 로 활용될 수 있습니다.
-특히 다른 예측 모듈이나 설계 도구와 연계해 **독성 없는 펩타이드 설계** 로까지 확장할 수 있습니다.
-
-> 지금 바로 <a href="#" onclick="window.open('https://curie.kr:444/Analysis/toxinPred3', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>에서 직접 사용해보세요!
-
----
-
-> 📌 관련 독성 예측 도구들도 함께 살펴보세요:
->
-> * 간 독성: [DILI](https://github.com/srijitseal/DILI)
-> * 심장 독성: [hERG-prediction](https://github.com/WeilabMSU/hERG-prediction)
-> * 신경 독성: [NeuTox](https://github.com/xuejunhe/NeuTox-2.0)
-> * 유전 독성: [Amesformer](https://github.com/luke-a-thompson/AmesFormer)
-> * 면역 독성: [mhcflurry](https://github.com/openvax/mhcflurry), [DeepNeo](https://github.com/kaistomics/DeepNeo)
-> * 구조 기반 독성 예측: [StrucToxNet](https://github.com/), [tAMPER](https://github.com/), [HEMOPI2](https://github.com/)
-
-> 🧩 연계 도구 예시: Boltz, ThermoMPNN, ProteinMPNN
+> <a href="#" onclick="window.open('https://curie.kr:444/Analysis/toxinpred3.0', '_blank'); return false;" rel="noopener noreferrer">ToxinPred3.0 분석 페이지</a>
