--- a/404.md
+++ b/404.md
@@ -1,4 +1,165 @@
 ---
-layout: not-found
-permalink: 404.html
+layout: main
+title: 404 - Page Not Found
+description: 요청하신 페이지를 찾을 수 없습니다
 ---
+
+<style>
+  /* Hero Section Styles */
+  .hero-section {
+    position: relative;
+    width: 100%;
+    min-height: 30vh;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 3rem;
+  }
+
+  .hero-background {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 122%;
+    height: 100%;
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    z-index: 0;
+  }
+
+  .hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 25, 38, 0.5);
+    z-index: 1;
+  }
+
+  .hero-content {
+    position: relative;
+    z-index: 2;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 4rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .hero-title {
+    color: white;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: clamp(2rem, 4vw, 3rem);
+    font-weight: 700;
+    margin-bottom: 1rem;
+    line-height: 1.2;
+  }
+
+  .hero-description {
+    color: rgba(255, 255, 255, 0.9);
+    font-size: clamp(1.125rem, 2vw, 1.5rem);
+    font-weight: 400;
+    font-family: 'Noto Sans KR', sans-serif;
+    line-height: 1.4;
+  }
+
+  /* Content Section */
+  .content-section {
+    padding: 0 20px 60px;
+    max-width: 800px;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .error-404 {
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 16px;
+    padding: 3rem;
+  }
+
+  .error-code {
+    font-size: 5rem;
+    font-weight: 700;
+    color: #A6F0FF;
+    margin-bottom: 1rem;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+
+  .error-message {
+    font-size: 1.5rem;
+    color: white;
+    margin-bottom: 1.5rem;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+
+  .error-description {
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 2rem;
+  }
+
+  .back-home {
+    display: inline-block;
+    background: rgba(166, 240, 255, 0.15);
+    border: 1px solid #A6F0FF;
+    color: #A6F0FF;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: all 0.3s ease;
+  }
+
+  .back-home:hover {
+    background: rgba(166, 240, 255, 0.25);
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(166, 240, 255, 0.2);
+  }
+
+  @media (max-width: 768px) {
+    .error-code {
+      font-size: 3.5rem;
+    }
+
+    .error-message {
+      font-size: 1.2rem;
+    }
+
+    .error-404 {
+      padding: 2rem;
+    }
+  }
+</style>
+
+<!-- Hero Section -->
+<section class="hero-section">
+  <div class="hero-background"></div>
+  <div class="hero-overlay"></div>
+  <div class="hero-content">
+    <h1 class="hero-title">Page Not Found</h1>
+    <p class="hero-description">{{ page.description }}</p>
+  </div>
+</section>
+
+<!-- Content Section -->
+<div class="content-section">
+  <div class="error-404">
+    <div class="error-code">404</div>
+    <h2 class="error-message">페이지를 찾을 수 없습니다</h2>
+    <p class="error-description">
+      요청하신 페이지가 존재하지 않거나 이동되었을 수 있습니다.<br>
+      URL을 확인하시거나 홈페이지로 돌아가주세요.
+    </p>
+    <a href="/" class="back-home">홈으로 돌아가기</a>
+  </div>
+</div>
